--- a/my_website/index.html
+++ b/my_website/index.html
@@ -4,10 +4,18 @@
     <meta charset="utf-8">
     <title>Home</title>
   </head>
+  <style>
+  body {
+background-color: black;
+color: white;
+}
+  </style>
   <body>
-    <a href="index.html">Home</a>
-    <a href="portfolio.html">Portfolio</a>
-    <h1>This is my test Home Page!</h1>
-    <img src="images/home.jpg" height="250">
+    <a href="index.html"><center>Home</center></a>
+    <a href="portfolio.html"><center>Portfolio</center></a>
+    <a href="about.html"><center>about me</center></a>
+    <center><h1>this is my about meh page :3!</h1></center>
+    
+    <center><img src="images/homepage.jpg" height="250"></center>
   </body>
 </html>
