--- a/my_website/portfolio.html
+++ b/my_website/portfolio.html
@@ -1,16 +1,14 @@
 <!doctype html>
-	<html lang="en">
-	  <head>
-	    <meta charset="utf-8">
-	    <title>Portfolio</title>
-	  </head>
-	  <body>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>Portfolio</title>
+  </head>
+  <body>
     <a href="index.html">Home</a>
-    <a href="portfolio.html">Portfolio</a>
-    <h1>This is my Portfolio Page!</h1>
-    <img src="images/portfolio.jpg" height="250">
-    <br>
-    <a target="_blank" href="https://scratch.mit.edu">
-      <img src="images/scratchlogo.png" height="100">
-    </a>
-	  </body>
+    <a href="portfolio.png">Portfolio</a>
+    <center><h1>this is me portfolioliolio page :3!</h1></center>
+    
+    <center><img src="images/homepage.jpg" height="250"></center>
+  </body>
+</html>
